# books-for-bots

./: .gitignore  ABOUT.md  CHANGELOG.md  Cargo.toml  README.md  catalog-info.yaml
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-05-01-implementation.md
docs/specs/: 2026-05-01-design.md
docs/superpowers/specs/: 2026-07-11-prebuilt-binaries-ci-design.md
examples/alice/output/alice-s-adventures-in-wonderland-lewis-carroll/: alice-s-adventures-in-wonderland-lewis-carroll.md
src/: assemble.rs  block.rs  cli.rs  error.rs  extract.rs  frontmatter.rs  images.rs  lib.rs  load.rs  main.rs  render.rs  slug.rs  write.rs
tests/: determinism.rs  integration.rs  load_smoke.rs  offsets.rs
tests/common/: mod.rs
